Fix spacing and color of load-more button in the transactions list

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -115,10 +115,6 @@ body {
   background-color: inherit !important;
 }
 
-.custom-button-end-card {
-  width: 197px !important;
-}
-
 .custom-button-send-receive-money {
   background: #009688 !important;
   text-transform: uppercase !important;
